# fooyin-plugin-libvgm

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: vgminput.cpp  vgminput.json.in  vgminputplugin.cpp  vgminputplugin.h
